# moca-oneway-cut

./: LICENSE  README.md  pyproject.toml
examples/: basic_usage.py  example.ipynb
notebooks/: ihdp_smoke_test.ipynb
outputs/: ihdp_smoke_test_results_5seeds.csv  ihdp_smoke_test_summary_5seeds.csv
src/moca_oneway_cut/: __init__.py  data.py  estimator.py  models.py
tests/: test_api.py
